--- a/MongooseDaemon/MongooseDaemon/MongooseDaemon-Info.plist
+++ b/MongooseDaemon/MongooseDaemon/MongooseDaemon-Info.plist
@@ -21,10 +21,10 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>3</string>
+	<string>1.2</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 CIM. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>MongooseDaemon</string>
 </dict>
 </plist>
